
cmake_minimum_required(VERSION 3.16 FATAL_ERROR)

project(KnoughtsScrosses VERSION  1.0.0 LANGUAGES CUDA CXX)

set(HEADERS_KNOUGHTS_CROSSES
	${CMAKE_CURRENT_SOURCE_DIR}/agent.h 
	${CMAKE_CURRENT_SOURCE_DIR}/board.h
	${CMAKE_CURRENT_SOURCE_DIR}/gameStarter.h
	${CMAKE_CURRENT_SOURCE_DIR}/State.h
)



set(SOURCES_KNOUGHTS_CROSSES
	${CMAKE_CURRENT_SOURCE_DIR}/agent.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/board.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/gameStarter.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/State.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/knoughtscrosses.cpp
)


add_executable(KnoughtsScrosses ${HEADERS_KNOUGHTS_CROSSES} ${SOURCES_KNOUGHTS_CROSSES})

set_target_properties(KnoughtsScrosses PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
